--- a/visu_final.html
+++ b/visu_final.html
@@ -353,7 +353,7 @@ Esa combinación —<strong>ganar y gobernar</strong>— parece contar.</p>
 <section id="y-la-ventaja-electoral-también-ayuda" class="slide level2">
 <h2>Y la ventaja electoral también ayuda</h2>
 <div class="cell">
-<iframe src="https://datawrapper.dwcdn.net/9XHK0/2/" width="960" height="600px" data-external="1">
+<iframe src="http://datawrapper.dwcdn.net/9XHK0/2/" width="960" height="600px" data-external="1">
 </iframe>
 </div>
 </section>
@@ -381,7 +381,7 @@ Esa combinación —<strong>ganar y gobernar</strong>— parece contar.</p>
 <section id="qué-pasó-en-tu-municipio" class="slide level2">
 <h2>¿Qué pasó en tu municipio?</h2>
 <div class="cell">
-<iframe src="https://datawrapper.dwcdn.net/bRPoA/6/" width="960" height="600px" data-external="1">
+<iframe src="https://datawrapper.dwcdn.net/bRPoA/7/" width="960" height="600px" data-external="1">
 </iframe>
 </div>
 </section>
